	PR c++/24389 	* decl2.c (mark_used): Use uses_template_parms instead of 	dependent_type_p. 	* init.c (constant_value_1): Handle uninstantiated templates 	specially. 	* pt.c (instantiate_decl): Add sanity check. 	PR c++/24389 	* g++.dg/template/static21.C: New test. 	* g++.dg/template/static21-a.cc: Likewise.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@105474 138bc75d-0d04-0410-961f-82ee72b054a4